--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -23,6 +23,7 @@
     <script>
         var converter = new showdown.Converter();
     </script>
+    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.8.0/dist/mermaid.min.js"></script>
     <script>mermaid.initialize({startOnLoad:true});</script>
     <title>Ajout</title>
