--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -26,7 +26,6 @@
             <p>{{ checkbox }}</p>
         {% endfor %}
     </div>
-    
+    {%include 'partials/footer.html'%}
 </body>
-
 </html>
