--- a/templates/MesQCM.html
+++ b/templates/MesQCM.html
@@ -12,7 +12,9 @@
 
 <body>
     {%include 'partials/_nav.html'%}
-    <h1>Mes QCM</h1>
+    <div class="menu">
+        <h1>Mes QCM</h1>
+    </div>
+    {%include 'partials/footer.html'%}
 </body>
-
 </html>
