--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -16,5 +16,6 @@
         <p>Connecté avec : {{Utilisateur.nom}}</p>
         {% endfor %}
     </div>
+    {%include 'partials/footer.html'%}
 </body>
 </html>
