--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -71,4 +71,5 @@
             Cliquez sur visualiser pour voir la visualisation de votre visuel
         </div>
     </div>
+    {%include 'partials/footer.html'%}
 </body>
