--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -56,4 +56,5 @@
         <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une autre question</a>
         <a class="button" name="menu" href="/">Retour au menu</a> -->
     </div>
+    {%include 'partials/footer.html'%}
 </body>
