--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -23,4 +23,5 @@
         </form>
         <!-- <a class="button" name="menu" href="/">Retour au menu</a><br/> -->
     </div>
+    {%include 'partials/footer.html'%}
 </body>
