--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -12,14 +12,16 @@
 
 <body>
     {%include 'partials/_nav.html'%}
-    <form action="/generate" method="POST">
-        <h1>Créer ton examen</h1>
-        {%for element in ListesQuestions%}
-        <input type="checkbox" name="{{element.idQ}}">{{element.enonce}}
-        <br> {%endfor%}
-        <button type="submit">Envoyer</button>
+    <div class="menu">
+        <form action="/generate" method="POST">
+            <h1>Créer ton examen</h1>
+            {%for element in ListesQuestions%}
+            <input type="checkbox" name="{{element.idQ}}">{{element.enonce}}
+            <br> {%endfor%}
+            <button type="submit">Envoyer</button>
 
-    </form>
+        </form>
+    </div>
     {%include 'partials/footer.html'%}
 </body>
 
