--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
+
 
     <title>Document</title>
 </head>
