--- a/templates/MesQCM.html
+++ b/templates/MesQCM.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
+
     <title>Liste QCM</title>
 </head>
 
@@ -17,4 +18,5 @@
     </div>
     {%include 'partials/footer.html'%}
 </body>
+
 </html>
