--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="icon" type="image/x-icon" href="/static/icone.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
+
     <title>Connexion</title>
 </head>
+
 <body>
     {%include 'partials/_nav.html'%}
     <div class="menu">
@@ -18,4 +21,5 @@
     </div>
     {%include 'partials/footer.html'%}
 </body>
+
 </html>
