--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
+
     <title>Bienvenue !</title>
 </head>
 
@@ -14,7 +15,7 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Bienvenue<br/>sur<br/>Infomaker !</h1>
-        
+
         <!-- <a class="button" name="connexion" href="/connexion">Connexion</a> -->
         <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
         <a class="button" name="lquestion" href="/lquestion">Liste de questions</a> -->
@@ -26,4 +27,5 @@
     </div>
     {%include 'partials/footer.html'%}
 </body>
+
 </html>
