--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    
+
     <title>Ajout</title>
 </head>
 
