--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
     <title>QCM</title>
 </head>
 
@@ -15,6 +14,7 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <form action="/generate" method="POST">
+            <!--ce form permet d'afficher la liste des question -->
             <h1>Créer ton examen</h1>
             {%for element in ListesQuestions%}
             <input type="checkbox" name="{{element.idQ}}">{{element.enonce}}
