--- a/static/style.css
+++ b/static/style.css
@@ -79,7 +79,7 @@ h1 {
     padding: 2em;
     width: 25em;
     background-color: whitesmoke;
-    text-align: center;
+    text-align: left;
     margin-left: 5em;
 }
 
