--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    {%include 'partials/_nav.html'%}
     <div class="menu">
         <script>
             function afficherQCM() {
