--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/style.css" rel="stylesheet">
-    {%include 'partials/Biblio.html'%}
+    <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
     <title>Document</title>
 </head>
 
@@ -23,10 +22,16 @@
             }
         </script>
         <div class="affQCM">
+
             {% for checkbox in question %}
             <p>{{ checkbox }}</p>
+            {% endfor %} {% for checkbox in reponse %}
+            <p>{{ checkbox }}</p>
             {% endfor %}
+
         </div>
+
+
     </div>
     {%include 'partials/footer.html'%}
 </body>
