--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -25,7 +25,8 @@
 
             {% for checkbox in question %}
             <p>{{ checkbox }}</p>
-            {% endfor %} {% for checkbox in reponse %}
+            {% endfor %} 
+            {% for checkbox in reponse %}
             <p>{{ checkbox }}</p>
             {% endfor %}
 
