--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -20,7 +20,6 @@
                 <p>Question : <br/><textarea id="question" name="question" rows="4" cols="40" onkeyup="visualiserQ()"></textarea></p>
                 <hr/>
                 <div class="nouveauBouton">
-                    <button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button>
                     <script>
                         function demandePlusReponse() { // Fonction JavaScript pour envoyer une requête GET à la route /plusDeReponse
                             // Utilisation de l'API Fetch pour envoyer une requête GET à /plusDeReponse
@@ -60,6 +59,7 @@
                         }
                     </script>
                 </div>
+                <p><button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
             </form>
         </div>
