--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-    {%include 'partials/_nav.html'%}
     <div class="menu">
-        <h1>Bienvenue<br/>sur<br/>Infomaker !</h1>
-        {% for user in accueil %}
-        <p>Connecté avec : {{Utilisateur.nom}}</p>
-        {% endfor %}
+        <h1>Connexion</h1>
+        <form action="/connexion" method="POST">
+            <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>
+            <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>
+            <p><input class="button" type="submit" value="Connexion" /></p>
+        </form>
     </div>
     {%include 'partials/footer.html'%}
 </body>
