--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -55,7 +55,8 @@
                             // Utilisation de jQuery pour remplacer le contenu HTML de l'élément ayant 
                             // la classe 'visu' avec la valeur de textQuestion
                             $(".visu").html(textQuestion);
-                            MathJax.typeset()
+                            MathJax.typeset();
+                            hljs.highlightAll();
                         }
                     </script>
                 </div>
