--- a/templates/partials/Biblio.html
+++ b/templates/partials/Biblio.html
@@ -22,3 +22,6 @@
         startOnLoad: true
     });
 </script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
