--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -12,26 +12,24 @@
 <body>
     {%include 'partials/_nav.html'%}
     <div class="menu">
-        
+        <h1>Votre QCM</h1>
+        <hr/>
         <div class="affQCM">
             {% for question in listequestion %}
             <div id="{{question.idQ}}">{{question.enonce}}</div>
-            <script>
-                $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
-            </script>
-
+                <script>
+                    $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
+                </script>
                 {% for reponse in listereponse %}
                 <div id="{{reponse.idR}}">{{reponse.reponse}}</div>
                 <script>
                     $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
                 </script>
                 {% endfor %}
-
-                <script> document.write(converter.makeHtml('---'))</script>
+                <hr/> <!-- on a découvert plus tard qu'on pouvait faire une ligne avec la balise <hr/> -->
+                <!-- <script> document.write(converter.makeHtml('---'))</script> -->
             {% endfor %} 
-
         </div>
-
     </div>
     {%include 'partials/footer.html'%}
 </body>
