début etiquettes, ça marche pas kekw

--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -19,6 +19,7 @@
                 <h1>Ecrivez une question</h1>
                 <p>Question : <br/><textarea id="question" name="question" rows="4" cols="40" onkeyup="visualiserQ()"></textarea></p>
                 <hr/>
+                
                 <div class="nouveauBouton">
                     <script>
                         function demandePlusReponse() { // Fonction JavaScript pour envoyer une requête GET à la route /plusDeReponse
@@ -58,6 +59,9 @@
                             MathJax.typeset()
                         }
                     </script>
+                    {% for etiquette in etiquettes %}
+                        <input type="checkbox" name="{{ etiquette.nom }}" value="{{ etiquette.idE }}"> {{ etiquette.nom }}<br>
+                    {% endfor %}
                 </div>
                 <p><button type="button" onclick="demandePlusReponse()">Ajouter une réponse</button></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
