--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul class="nav-list">
         <li {% if page=="Menu" %} class="active" {% endif %}><a href="/">Menu</a></li>
-        <li {% if page=="Créer" %} class="active" {% endif %}><a href="/ajout">Créer Question</a></li>
+        <li {% if page=="Créer" %} class="active" {% endif %}><a href="/creerQuestion">Créer Question</a></li>
         <li {% if page=="Consulter" %} class="active" {% endif %}><a href="/lquestion">Consulter Questions</a></li>
         <li {% if page=="CréerQcm" %} class="active" {% endif %}><a href="/QCM">Créer QCM</a></li>
         <li {% if page=="ConsulterQcm" %} class="active" {% endif %}><a href="/MesQCM">Consulter QCM</a></li>
