--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -69,7 +69,7 @@
             </form>
         </div>
         <div class="visu">
-            Cliquez sur visualiser pour voir la visualisation de votre visuel
+            <h1 class="middle">Visualisation</h1>
         </div>
     </div>
     {%include 'partials/footer.html'%}
