--- a/templates/partials/Biblio.html
+++ b/templates/partials/Biblio.html
@@ -12,16 +12,13 @@
     }
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
-<script>
-    var converter = new showdown.Converter();
-</script>
-<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mermaid@8.8.0/dist/mermaid.min.js"></script>
-<script>
-    mermaid.initialize({
-        startOnLoad: true
-    });
-</script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
+<script>
+    mermaid.initialize({ startOnLoad: true });
+</script>
+<script>
+    var converter = new showdown.Converter();
+</script>
