--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -14,6 +14,7 @@
 <body>
     <div class="menu">
         <h1>Connexion</h1>
+        <p>nom=mdp</p>
         <form action="/connexion" method="POST">
             <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>
             <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>
