--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
         <p>Bonjour, {{session['nomU']}}</p>
         <a class="button" name="deconnexion" href="/deconnexion">Deconnexion</a>
         {% else %}
+        <a class="button" name="creationCompte" href="/creationCompte">Créer un compte</a>
         <a class="button" name="connexion" href="/connexion">Connexion</a>
         {% endif %}
         <!-- <a class="button" name="ajout" href="/ajout">Ajout d'une question</a>
