--- a/templates/lquestion.html
+++ b/templates/lquestion.html
@@ -15,7 +15,7 @@
     {%include 'partials/_nav.html'%}
     <div class="menu">
         <h1>Liste des questions</h1>
-        <div class="listeQ">
+        <div class="liste">
             <table>
                 <tr class="top">
                     <td>Question</td>
