--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,7 @@ td {
     border: 1px solid black;
 }
 
+/* Classe pour colorer les titres des colonnes d'un tableau */
 .top {
     background-color: darkgray;
 }
@@ -28,6 +29,7 @@ h1 {
     padding: 0.5em;
 }
 
+/* Classe basique affichage du menu au centre */
 .menu{
     border: 0.5em solid black;
     border-radius: 10px;
@@ -41,12 +43,14 @@ h1 {
     background-color: whitesmoke;
 }
 
-.listeQ{
+/* Classe pour définir la taille d'une liste et la possibilité de scroll si dépassement */
+.liste{
     height:40vh;
     border:2px solid black;
     overflow-y: scroll;
 }
 
+/* Centrage d'un élément sur l'écran */
 .mid{
     position:absolute;
     top:50%;
@@ -55,18 +59,22 @@ h1 {
     opacity: 0.9;
 }
 
+/* Texte au milieu */
 .middle{
     text-align: center;
 }
 
+/* Texte à gauche */
 .left{
     text-align: left;
 }
 
+/* Disposition de la classe code et visu */
 .double{
     display: flex;
 }
 
+/* Classe pour créer les questions dans ajoutQuestion (gauche) */
 .code{
     border: 0.5em solid black;
     border-radius: 10px;
@@ -79,6 +87,7 @@ h1 {
     overflow-y: scroll;
 }
 
+/* Classe pour visualiser les questions dans ajoutQuestion (droite) */
 .visu{
     border: 0.5em solid black;
     border-radius: 10px;
@@ -89,6 +98,7 @@ h1 {
     margin-left: 5em;
 }
 
+/* Classe pour modifier les <a> afin qu'ils ressemblent à des boutons */
 .button {
     /* outline: none; */
     text-align: center;
@@ -100,10 +110,12 @@ h1 {
     transition: 0.25s;
 }
 
+/* Si on a déjà cliquer sur un bouton */
 .button:visited {
     color: black;
 }
 
+/* Lorsqu'on passe le curseur dessus */
 .button:hover {
     background-color: lightgray;
     transition: 0.25s;
@@ -119,6 +131,7 @@ footer {
     font: menu;
 }
 
+/* Classe affichage de la barre de navigation */
 .nav-list{
     list-style-type:none;
     margin: 0;
@@ -128,10 +141,12 @@ footer {
     font: menu;
 }
 
+/* allignement des li de la navigation à gauche */
 .nav-list li {
     float: left;
 }
 
+/* Customisation des liens */
 .nav-list li a {
     display: block;
     color: white;
@@ -140,19 +155,23 @@ footer {
     text-decoration: none;
 }
 
+/* Lorsqu'on passe le curseur dessus */
 .nav-list li a:hover{
     background-color: #111;
 }
 
+/* Colore en rouge, le bouton de la page actuelle */
 .active{
     background-color: darkred;
 }
 
+/* taille de l'icone pour supprimer une réponse */
 .delete{
     width: 1.5vw;
     height: 1.5vw;
 }
 
+/* CSS de checkbox réponse (voir références) */
 [type="checkbox"].newReponse:not(:checked),
 [type="checkbox"].newReponse:checked {
     position: absolute;
@@ -226,7 +245,9 @@ footer {
     box-sizing: border-box;
     margin-top: -1px;
 }
+/* fin du CSS pour checkbox réponse */
 
+/* Affichage du qcm crée */
 .affQCM{
     height:60vh;
     background-color: whitesmoke;
