--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -17,7 +17,7 @@
         <form action="/generate" method="POST">
             <!--ce form permet d'afficher la liste des question -->
             <h1>Créer ton examen</h1>
-            <div class="listeQ">
+            <div class="liste">
                 <table>
                     <tr class="top"><td>Sélectionner</td><td>Questions</td></tr>
                     {%for element in ListesQuestions%}
