--- a/templates/Affichage.html
+++ b/templates/Affichage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/style.css" rel="stylesheet"> {%include 'partials/Biblio.html'%}
-    <title>Votre Examen</title>
+    <title>Votre QCM</title>
 </head>
 
 <body>
@@ -15,18 +15,18 @@
         <h1>Votre QCM</h1>
         <hr/>
         <div class="affQCM">
-            {% for question in listequestion %}
+            {% for question in listequestion %}     <!-- Pour chaque question dans la liste de questions -->
             <div id="{{question.idQ}}">{{question.enonce}}</div>
-                <script>
+                <script>                                     /* Convertisseur markdown */
                     $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
                 </script>
-                {% for reponse in listereponse %}
+                {% for reponse in listereponse %}  <!-- Chaque reponse dans la liste de reponses de la question -->
                 <div id="{{reponse.idR}}">{{reponse.reponse}}</div>
-                <script>
+                <script>                                     /* Convertisseur markdown */
                     $('#{{reponse.idR}}').html(converter.makeHtml($('#{{reponse.idR}}').text()));
                 </script>
                 {% endfor %}
-                <hr/> <!-- on a découvert plus tard qu'on pouvait faire une ligne avec la balise <hr/> -->
+                <hr/>
                 <!-- <script> document.write(converter.makeHtml('---'))</script> -->
             {% endfor %} 
         </div>
