--- a/templates/QCM.html
+++ b/templates/QCM.html
@@ -15,9 +15,10 @@
     <div class="menu">
         <form action="/generate" method="POST">
             <!--ce form permet d'afficher la liste des question -->
-            <h1>Créer ton examen</h1>
+            <h1>Créer votre examen</h1>
             <div>
-                <input type="text" name="Nomqcm" placeholder="Nommez votre qcm" />
+                <p>Donnez un titre à votre QCM :
+                <input type="text" name="nomQcm" placeholder="Titre" /></p>
             </div>
             <div class="liste">
                 <table>
