Suppression etiquettes ( et association avant elle )

--- a/templates/creationEtiquettes.html
+++ b/templates/creationEtiquettes.html
@@ -15,5 +15,9 @@
         <input type="text" name="nom" placeholder="Nom de l'étiquette"><br>
         <input class = "button" type="submit" value="Crée l'étiquette"><br>
     </form>
+    <form action="/suppEtiquettes" method="POST">
+        <input type="text" name="nom" placeholder="Nom de l'étiquette"><br>
+        <input class = "button" type="submit" value="suppression de l'étiquette"><br>
+    </form>
 </body>
 </html>
