--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -16,6 +16,15 @@
         <h1>Connexion</h1>
         <p>Pour faire plus simple, il est préférable de mettre <br/> son nom en tant que mot de passe</p>
         <hr/>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="flashes">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
         <form action="/connexion" method="POST">
             <p> Nom d'utilisateur : </p><input type="text" name="nomU" id="nomU"/>
             <p> Mot de passe : </p><input type="password" name="passU" id="passU"/>
